# Darko_Impedance_Controller

./: README.md
ModelTests/: CMakeLists.txt
ModelTests/src/: model.cpp  test_whole_body_controller.cpp
arm_impedance_controller/: CMakeLists.txt  package.xml
arm_impedance_controller/config/: arm_impedance_controller_config.yaml
arm_impedance_controller/include/: arm_impedance_controller.h
arm_impedance_controller/launch/: arm_impedance_controller.launch
arm_impedance_controller/src/: arm_impedance_controller.cpp  arm_impedance_controller_node.cpp
base_impedance_controller/: CMakeLists.txt  package.xml
base_impedance_controller/config/: base_impedance_controller_config.yaml
base_impedance_controller/include/: base_impedance_controller.h
base_impedance_controller/launch/: base_impedance_controller.launch
base_impedance_controller/src/: base_impedance_controller.cpp  base_impedance_controller_node.cpp
doc/rosbag_files/arm_line/: l1000.bag  l3000.bag  l3000_rotation_500.bag  l500.bag  l5000.bag
doc/rosbag_files/arm_line_punch/: 1000_100w_punch.bag  3000_100w_punch.bag  5000_100w_punch.bag  500_100w_punch.bag
doc/rosbag_files/base/: base_1000_line.bag  base_100_line.bag  base_3000_line.bag  base_500_line.bag
model_library/: CMakeLists.txt  package.xml
model_library/include/: model.h  rtwtypes.h
model_library/src/: model.cpp
whole_body_impedance_controller/: CMakeLists.txt  package.xml
whole_body_impedance_controller/include/: whole_body_impedance_controller.h
whole_body_impedance_controller/src/: whole_body_impedance_controller.cpp  whole_body_impedance_controller_node.cpp
