<?xml version="1.0"?>
<package format="2">
  <name>model_library</name>
  <version>0.0.0</version>
  <description>The model_library package</description>

  <maintainer email="alessandro.detoni98@gmail.com">Alessandro De Toni</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  <author email="alessandro.detoni98@gmail.com">Alessandro De Toni</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
